--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "./build/index.js",
   "author": "bearei <bear_ei@outlook.com>",
-  "description": "A react form hook for react and native.",
+  "description": "A React base form component.",
   "license": "MIT",
   "readmeFilename": "README.md",
   "repository": {
@@ -21,26 +21,28 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@types/mocha": "^8.0.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.2",
     "@types/node": "^14.11.2",
-    "@types/power-assert": "^1.5.3",
     "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/sinon": "^9.0.9",
     "eslint": "^7.14.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "espower-typescript": "^9.0.2",
     "global": "^4.4.0",
     "gts": "^3.1.0",
-    "mocha": "^8.2.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.0.11",
-    "nyc": "^15.0.1",
-    "power-assert": "^1.6.1",
+    "react-dom": "^18.2.0",
     "sinon": "^9.2.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.0.3",
+    "typescript": "^4.8.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
@@ -50,9 +52,10 @@
   ],
   "scripts": {
     "build": "webpack --config webpack.config.js --progress",
+    "test": "jest",
+    "coverage": "yarn test --coverage",
     "lint": "gts lint",
     "fix": "gts fix",
-    "test": "nyc mocha --require espower-typescript/guess test/*.test.ts test/**/*.test.ts",
     "clean": "gts clean"
   },
   "engines": {
