--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "webpack-cli": "^4.10.0"
   },
   "files": [
-    "dist/src"
+    "build/src"
   ],
   "scripts": {
     "build": "webpack --config webpack.config.js --progress",
