--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,12 @@ buck-out/
 
 # Coverage
 coverage/
+
+# Yarn2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
