--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/bear-ei/react-form/issues"
   },
   "dependencies": {
+    "@types/webpack-dev-server": "^4.7.2",
     "async-validator": "^4.2.5",
     "react": "^18.2.0"
   },
@@ -27,45 +28,65 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@prettier/plugin-pug": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
-    "@types/node": "^14.11.2",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/sinon": "^9.0.9",
-    "eslint": "^7.14.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "babel-loader": "^9.1.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "global": "^4.4.0",
-    "gts": "^3.1.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.0.11",
+    "prettier": "^2.7.1",
     "react-dom": "^18.2.0",
     "sinon": "^9.2.1",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.74.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "files": [
     "build/src"
   ],
   "scripts": {
-    "build": "webpack --config webpack.config.js --progress",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
     "test": "jest",
     "coverage": "yarn test --coverage",
-    "lint": "gts lint",
-    "fix": "gts fix",
-    "clean": "gts clean"
+    "lint": "eslint '**/*.{ts,tsx}'",
+    "fix": "eslint --fix '**/*.{ts,tsx}'"
   },
   "engines": {
-    "node": ">=11.0.0"
+    "node": ">=16.0.0"
   },
   "packageManager": "yarn@3.2.4"
 }
