--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@bearei/react-form",
   "version": "0.0.1",
-  "main": "./build/index.js",
+  "main": "lib/index.js",
+  "module": "lib-esm/index.js",
   "author": "bearei <bear_ei@outlook.com>",
   "description": "A React base form component.",
   "license": "MIT",
@@ -20,7 +21,6 @@
     "url": "https://github.com/bear-ei/react-form/issues"
   },
   "dependencies": {
-    "@types/webpack-dev-server": "^4.7.2",
     "async-validator": "^4.2.5",
     "react": "^18.2.0"
   },
@@ -28,14 +28,12 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@prettier/plugin-pug": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@types/sinon": "^9.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -50,10 +48,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "nock": "^13.0.11",
     "prettier": "^2.7.1",
     "react-dom": "^18.2.0",
-    "sinon": "^9.2.1",
+    "shx": "^0.3.4",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
@@ -61,25 +58,23 @@
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "files": [
-    "build/src"
+    "lib",
+    "lib-esm"
   ],
   "scripts": {
-    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
+    "build": "yarn clean && yarn build:cjs && yarn build:esm",
+    "build:esm": "cross-env TS_NODE_PROJECT=\"tsconfig.esm.json\" webpack --config webpack.config.esm.ts --progress",
+    "build:cjs": "cross-env TS_NODE_PROJECT=\"tsconfig.cjs.json\" webpack --config webpack.config.cjs.ts --progress",
+    "clean": "shx rm -rf build lib-esm lib",
     "test": "jest",
     "coverage": "yarn test --coverage",
     "lint": "eslint '**/*.{ts,tsx}'",
