--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -9,11 +9,12 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
+    "sourceMap": true,
+    "declaration": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
@@ -25,5 +26,5 @@
       "module": "commonjs"
     }
   },
-  "include": ["src", "test", "jest.config.ts", "webpack.config.ts"]
+  "include": ["src"]
 }
