--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,3 @@
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
 nodeLinker: 'pnp'
-npmRegistryServer: 'https://registry.npm.taobao.org'
+npmRegistryServer: 'https://registry.npmjs.org/'
