--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@bearei/react-form",
-  "version": "0.0.1",
-  "main": "lib/index.js",
-  "module": "lib-esm/index.js",
+  "version": "0.0.3",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "module": "./lib-esm/index.js",
   "author": "bearei <bear_ei@outlook.com>",
-  "description": "A React base form component.",
+  "description": "Base form components that support React and React native",
   "license": "MIT",
   "readmeFilename": "README.md",
   "keywords": [
@@ -15,12 +16,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bear-ei/react-form"
+    "url": "https://github.com/bearei-team/react-form"
   },
   "bugs": {
-    "url": "https://github.com/bear-ei/react-form/issues"
+    "url": "https://github.com/bearei-team/react-form/issues"
   },
   "dependencies": {
+    "@bearei/react-util": "^0.0.22",
     "async-validator": "^4.2.5",
     "react": "^18.2.0"
   },
@@ -28,12 +30,19 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@bearei/react-dropdown": "^0.0.13",
+    "@bearei/react-input": "^0.0.19",
+    "@bearei/react-menu": "^0.0.19",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-native": "^0.70.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -46,10 +55,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "glob": "^8.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.7.1",
     "react-dom": "^18.2.0",
+    "react-native": "^0.70.6",
     "shx": "^0.3.4",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.3",
@@ -71,17 +82,19 @@
     "lib-esm"
   ],
   "scripts": {
-    "build": "yarn clean && yarn build:cjs && yarn build:esm",
-    "build:esm": "cross-env TS_NODE_PROJECT=\"tsconfig.esm.json\" webpack --config webpack.config.esm.ts --progress",
-    "build:cjs": "cross-env TS_NODE_PROJECT=\"tsconfig.cjs.json\" webpack --config webpack.config.cjs.ts --progress",
-    "clean": "shx rm -rf build lib-esm lib",
-    "test": "jest",
+    "build": "yarn clean && cross-env MODE=\"production\" yarn build:cjs && cross-env MODE=\"production\" yarn build:esm",
+    "build:dev": "yarn clean && cross-env MODE=\"development\" yarn build:cjs && cross-env MODE=\"development\" yarn build:esm",
+    "build:esm": "cross-env TS_NODE_PROJECT=\"tsconfig.esm.json\" LIBRARY=\"module\"  webpack --progress",
+    "build:cjs": "cross-env TS_NODE_PROJECT=\"tsconfig.cjs.json\" LIBRARY=\"commonjs\" webpack --progress",
+    "clean": "shx rm -rf lib-esm lib",
+    "test": "jest --watchAll --detectOpenHandles",
     "coverage": "yarn test --coverage",
-    "lint": "eslint '**/*.{ts,tsx}'",
-    "fix": "eslint --fix '**/*.{ts,tsx}'"
+    "lint": "eslint . --ext .jsx,.ts,.tsx",
+    "fix": "yarn lint --fix",
+    "publish": "yarn build && yarn npm publish --access public"
   },
   "engines": {
     "node": ">=16.0.0"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.3.0"
 }
