--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@bearei/react-form",
-  "version": "0.0.10",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
-  "module": "./lib-esm/index.js",
+  "version": "0.0.11",
+  "main": "./lib/commonjs/index",
+  "module": "./lib/module/index",
+  "types": "./lib/commonjs/index.d.ts",
   "author": "bearei <bear_ei@outlook.com>",
   "description": "Base form components that support React and React native",
   "license": "MIT",
@@ -77,15 +77,14 @@
     "not op_mini all"
   ],
   "files": [
-    "lib",
-    "lib-esm"
+    "lib"
   ],
   "scripts": {
     "build": "yarn clean && cross-env MODE=\"production\" yarn build:cjs && cross-env MODE=\"production\" yarn build:esm",
     "build:dev": "yarn clean && cross-env MODE=\"development\" yarn build:cjs && cross-env MODE=\"development\" yarn build:esm",
     "build:esm": "cross-env TS_NODE_PROJECT=\"tsconfig.esm.json\" LIBRARY=\"module\"  webpack --progress",
     "build:cjs": "cross-env TS_NODE_PROJECT=\"tsconfig.cjs.json\" LIBRARY=\"commonjs\" webpack --progress",
-    "clean": "shx rm -rf lib-esm lib",
+    "clean": "shx rm -rf lib",
     "test": "jest --watchAll --detectOpenHandles",
     "coverage": "yarn jest --coverage",
     "lint": "eslint . --ext .jsx,.ts,.tsx",
